[package]
name = "pinecone"
version = "0.2.5"
authors = ["Hannes Karppila <hannes@dento.fi>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/Dentosal/pinecone"
description = "A no_std + serde compatible message library for Rust"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
    "encoding",
]
keywords = [
    "no_std",
    "serde",
    "serialization",
]

[package.metadata.docs.rs]
all-features = true

[dependencies.serde]
version = "1.0.133"
default-features = false
features = ["derive", "alloc"]

[dev-dependencies.hashbrown]
version = "0.11.2"
features = ["nightly", "inline-more", "serde"]

[features]
use-std = ["serde/std"] # Use std instead of alloc
defaults = []
